# mir-core

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-23-mir-core-task-submodule-reorganisation.md
docs/superpowers/specs/: 2026-04-23-task-submodule-reorganisation-design.md
mir_core/: __init__.py  hub.py
mir_core/beats/: __init__.py  schema.py  tensor_converters.py
mir_core/beats/evaluation/: __init__.py
mir_core/beats/experiments/: README.md  __init__.py  (+1 more)
mir_core/checkpoints/: __init__.py  _resources.py
mir_core/classifier/: __init__.py
mir_core/datasets/: __init__.py  annotations.py  beat_dataset.py  beat_tracking_dataset.py  beatnet_dataset.py  genre_dataset.py  loaders.py  splits.py
mir_core/evaluation/: __init__.py  evaluator.py  metrics.py  visualization.py
mir_core/experiments/: README.md  __init__.py  presets.py
mir_core/models/: __init__.py
mir_core/postprocessing/: __init__.py  dbn.py  particle_filter.py  peak_picking.py  state_space_1d.py
mir_core/preprocessing/: __init__.py  harmonic_features.py  madmom_features.py  mel_features.py  registry.py  utils.py
mir_core/training/: __init__.py  freezing.py  modules.py
mir_core/utils/: __init__.py  hashing.py
mir_env/: verify_installation.py
tests/: test_beast.py  test_beast_freezing.py  test_beast_upstream.py  test_beat_schema.py  test_beatnet_authenticity.py  test_beats_experiments.py  test_bocktcn_arch.py  test_checkpoints.py  test_metrics.py  test_postprocessing_state_space_1d.py  test_preprocessing_contracts.py  test_presets.py  test_spectnt.py  test_utils_hashing.py
(+47 files in other folders)
